--- a/www/css/style.css
+++ b/www/css/style.css
@@ -147,15 +147,26 @@ body{
 }
 
 .main .calculo{
-    margin-top: 50%;
+    margin-top: 25%;
     position: static;
+}
+
+.main .calculo #textoResultado{
+    margin-top: 10%;
+    color: #AF2ADB;
+    font-size: 25px;
+}
+
+.main .calculo #resultado{
+    color: #AF2ADB;
+    font-size: 20px;
 }
 
 .main .calculo #title{
   font-size: 45px;
   font-family: 'Exo 2', sans-serif;
   color: chartreuse;
-  padding-left: 25%;
+  padding-left: 20%;
   padding-bottom: 20px;
 }
 
@@ -170,6 +181,41 @@ body{
   border-right: none;
 }
 
+.main .link{
+  text-decoration: none;
+
+  font-family: 'Source Serif Pro', serif;
+  color: chartreuse;
+  font-size: 20px;
+
+  margin-top: 10px;
+  padding-left: 20%;
+}
+
+.main .result #title{
+  font-size: 45px;
+  font-family: 'Exo 2', sans-serif;
+  color: chartreuse;
+  text-align: center;
+
+  padding-top: 45%;
+  padding-left: 10%;
+}
+
+.main .result #resultado{
+  font-family: 'Source Serif Pro', serif;
+  font-size: 25px;
+
+  padding-top: 40px;
+  text-align: center;
+}
+
+.main .result .btn{
+  width: 250px;
+
+  margin-top: 90px;
+}
+
 .btn-outline{
     --bs-btn-color: #AF2ADB;
     --bs-btn-border-color: #AF2ADB;
@@ -177,4 +223,3 @@ body{
     --bs-btn-hover-bg: #AF2ADB;
     --bs-btn-active-color: #AF2ADB;
 }
-
